use cookie headers in auth endpoints
